--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,1 +1,20 @@
-<p>login works! hola </p>
+<div class="container">
+    <div class="row vh-100 align-items-center justify-content-center">
+        <div class="col-11 col-lg-5">
+            <div class="border p-4 rounded shadow">
+                <h2 class="text-center mb-4">Inicio de sesión</h2> 
+                <div class="mb-3">
+                    <label for="email" class="form-label">Correo electrónico</label>
+                    <input type="email" class="form-control custom-rounded" id="email" placeholder="ejemplo@dominio.com" required>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Contraseña</label>
+                    <input type="password" class="form-control custom-rounded" id="password" placeholder="Crea una contraseña segura" required>
+                </div>
+                <div class="text-center"> 
+                    <button type="submit" class="btn btn-primary mb-3">Registrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
