--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -1,23 +1,24 @@
-<div class="container r">
+<div class="container">
     <div class="row vh-100 align-items-center justify-content-center">
-        <div class="col-11 col-lg-6">
-            <h2 class="text-center mb-4">LOGIN</h2> 
-            <div class="mb-3">
-                <label for="username" class="form-label">User</label>
-                <input type="text" class="form-control" id="username" placeholder="User name" required>
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="Email" required>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Password" required>
-            </div>
-            <div class="text-center"> <!-- Centrar el botón -->
-                <button type="submit" class="btn btn-primary mb-3">Registrar</button>
+        <div class="col-11 col-lg-5">
+            <div class="border p-4 rounded shadow">
+                <h2 class="text-center mb-4">Registro de Usuario</h2> 
+                <div class="mb-3">
+                    <label for="username" class="form-label">Nombre de usuario</label>
+                    <input type="text" class="form-control custom-rounded" id="username" placeholder="Escribe tu nombre de usuario" required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Correo electrónico</label>
+                    <input type="email" class="form-control custom-rounded" id="email" placeholder="ejemplo@dominio.com" required>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Contraseña</label>
+                    <input type="password" class="form-control custom-rounded" id="password" placeholder="Crea una contraseña segura" required>
+                </div>
+                <div class="text-center"> 
+                    <button type="submit" class="btn btn-primary mb-3">Registrar</button>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
