✨ Feature - implement logic for login component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
+@if(notification().show){
+<app-notification [notification]="notification()"></app-notification>
+}
+
 <router-outlet></router-outlet>
