--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,20 +1,20 @@
 <div class="container">
     <div class="row vh-100 align-items-center justify-content-center">
         <div class="col-11 col-lg-5">
-            <div class="border p-4 rounded shadow">
-                <h2 class="text-center mb-4">Inicio de sesión</h2> 
+            <form class="border p-4 rounded shadow" [formGroup]="loginForm">
+                <h2 class="text-center mb-4">Inicio de sesión</h2>
                 <div class="mb-3">
                     <label for="email" class="form-label">Correo electrónico</label>
-                    <input type="email" class="form-control custom-rounded" id="email" placeholder="ejemplo@dominio.com" required>
+                    <input type="email" class="form-control custom-rounded"  placeholder="ejemplo@dominio.com" required formControlName="email">
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Contraseña</label>
-                    <input type="password" class="form-control custom-rounded" id="password" placeholder="Crea una contraseña segura" required>
+                    <input type="password" class="form-control custom-rounded" placeholder="Crea una contraseña segura" required formControlName="password">
                 </div>
-                <div class="text-center"> 
-                    <button type="submit" class="btn btn-primary mb-3">Registrar</button>
+                <div class="text-center">
+                    <button class="btn btn-primary mb-3" (click)="submit()" [disabled]="!   loginForm.valid">Ingresar</button>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
