--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -1,3 +1,14 @@
 .custom-rounded {
     border-radius: 15px;
 }
+
+.imagen-container{
+    display: none;
+}
+
+@media (min-width: 800px) {
+    /* … */
+    .imagen-container {
+        display: block;
+    }
+  }
